package com.idvey.afya.models;

import jakarta.persistence.*;
import lombok.*;
import org.hibernate.annotations.CreationTimestamp;
import org.hibernate.annotations.UpdateTimestamp;

import java.time.LocalDate;
import java.time.LocalDateTime;
import java.util.HashSet;
import java.util.Set;
import java.util.UUID;

@Entity
@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
@Builder
@Table(name = "prescriptions")
public class Prescription {

	@Id
	@GeneratedValue(strategy = GenerationType.UUID)
	private UUID id;

	// prescription name
	@Column(name = "name", nullable = false)
	private String name; // e.g., "Prescription for Diabetes", "Antibiotic Prescription" ,
							// ""doctor's name" Prescription"

	@Column(name = "start_date", nullable = false)
	private LocalDate startDate;

	@Column(name = "end_date")
	private LocalDate endDate;

	@Column(name = "created_at", nullable = false, updatable = false)
	@CreationTimestamp
	private LocalDateTime createdAt;

	@Column(name = "updated_at")
	@UpdateTimestamp
	private LocalDateTime updatedAt;

	// Many-to-one relationship with User
	@ManyToOne(fetch = FetchType.LAZY)
	@JoinColumn(name = "user_id", nullable = false)
	private User user;

	// One-to-many relationship with Treatment
	@OneToMany(mappedBy = "prescription", cascade = CascadeType.ALL, orphanRemoval = true)
	@Builder.Default
	private Set<Treatment> treatments = new HashSet<>();

	// Many-to-many relationship with Disease
	@ManyToMany(fetch = FetchType.LAZY)
	@JoinTable(name = "prescription_disease", joinColumns = @JoinColumn(name = "prescription_id"),
			inverseJoinColumns = @JoinColumn(name = "disease_id"))
	@Builder.Default
	private Set<Disease> diseases = new HashSet<>();

}